# xmonad-sybrand

./: derivation.nix  flake.nix  test-vm  xmonad-sybrand.cabal
modules/: xmonad-sybrand.nix
modules/agnostic/: common.nix  polybar.nix  systemInfo.nix
modules/agnostic/dotfiles/: polybar.toml  sxhkdrc.nix
src/: Projects.hs  xmonad.hs
