cabal-version:       2.4

-- Stolen from:
-- https://github.com/splintah/xmonad-splintah/blob/master/xmonad-splintah/xmonad-splintah.cabal

name:                xmonad-sybrand
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             AGPL-3.0-only
-- license-file:        LICENSE
author:              Sybrand Aarnoutse
-- maintainer:
-- copyright:
-- category:
-- extra-source-files: xmonad.hs

executable xmonad
  main-is:             xmonad.hs
  other-modules:       TmuxPrompt, OpenFilePrompt, MyFullscreen, MouseFollowsFocus
  -- other-extensions:
  build-depends:       base
                     , xmonad ^>=0.15
                     , xmonad-contrib ^>=0.16
                     -- , xmonad-extra ^>=0.16
                     , X11 ^>=1.9
                     , containers ^>=0.6
                     , process ^>=1.6
  hs-source-dirs:      src
  default-language:    Haskell2010
